initial site files

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
 </section>
 </body>
 <footer>
-    &copy;2018 by <a href="mailto:pjborowiec@gmail.com">Patricia Joanna Borowiec</a></p>
+    <p class="-200p">Copyright &copy;2018 by Patricia Joanna Borowiec</p>
 </footer>
 </body>
 </html></html>
