--- a/contact.html
+++ b/contact.html
@@ -9,28 +9,28 @@
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
     <title>PJB</title>
 </head>
-    <body class="bgc-388E3C d-f fd-c h-100p pad-20px">
-        <section class="fl-1">
+    <body class="100p pad-20px">
+        <section class="">
         <header>
-            <nav class="ai-b bb-s c-E8F5E9 d-f jc-sa">
-                <h1 class="fs-300p w-61p">Patricia Joanna Borowiec</h1>
-                <div class="ai-b d-f jc-sa w-39p">
-                    <a class="bdc-FFEB3B bds-s bgc-1B5E20 bw-3 c-E8F5E9 d-b fs-200p pad-20px ta-c td-n bgc-1B5E20-hv" href="./index.html">About</a>
-                    <a class="bdc-FFEB3B bds-s bgc-1B5E20 bw-3 c-E8F5E9 d-b fs-200p pad-20px ta-c td-n bgc-1B5E20-hv" href="./portfolio.html">Portfolio</a>
-                    <a class="bdc-FFEB3B bds-s bgc-1B5E20 bw-3 c-E8F5E9 d-b fs-200p pad-20px ta-c td-n bgc-1B5E20-hv" href="./contact.html">Contact</a>
+            <nav class="">
+                <h1 class="">Patricia Joanna Borowiec</h1>
+                <div class="">
+                    <a class="200p pad-20px" href="./index.html">About</a>
+                    <a class="200p pad-20px" href="./portfolio.html">Portfolio</a>
+                    <a class="200p pad-20px" href="./contact.html">Contact</a>
                 </div>
             </nav>
         </header>
-        <section id="content" class="ai-fs d-f jc-sa mt-5p">
-            <form action="/tbd" method="POST" id="contact" class="bdc-FFEB3B bds-s bgc-1B5E20 bw-3 w-55p">
-                <div><h2 class="bb-s c-E8F5E9 fs-200p">Contact Me</h2></div>
-                <div class="c-E8F5E9 fs-150p pad-1p"><label for="name">NAME:</label></div>
-                <div><input class="ml-5p w-30p" type="text" id="name" name="name"></div>
-                <div class="c-E8F5E9 fs-150p pad-1p"><label for="mail">EMAIL:</label></div>
-                <div><input class="ml-5p w-30p" type="email" id="mail" name="user_mail"></div>
-                <div class="c-E8F5E9 fs-150p pad-1p"><label for="msg">SPIT IT:</label></div>
+        <section id="content" class="">
+            <form action="/tbd" method="POST" id="contact" class=" 55p">
+                <div><h2 class="200p">Contact Me</h2></div>
+                <div class="-150p pad-1p"><label for="name">NAME:</label></div>
+                <div><input class="-5p -30p" type="text" id="name" name="name"></div>
+                <div class="-150p pad-1p"><label for="mail">EMAIL:</label></div>
+                <div><input class="-5p -30p" type="email" id="mail" name="user_mail"></div>
+                <div class="-150p pad-1p"><label for="msg">SPIT IT:</label></div>
                 <div><textarea class="ml-5p w-30p" id="msg" name="user_message"></textarea></div>
-                <div  class="c-E8F5E9 fs-150p pad-1p"><button type="submit">SEND</button></div>
+                <div  class="-150p pad-1p"><button type="submit">SEND</button></div>
             </form>
                 <div class="sidebar">
                     <h2 class="sidebar-title">Follow Me</h2>
@@ -43,8 +43,8 @@
         </section>
         </section>
 
-        <footer class="bt-s c-E8F5E9 fs-0 pad-20px">
-            <p class="fs-200p ta-c">Copyright &copy;2018 by <a href="mailto:pjborowiec@gmail.com">Patricia Joanna Borowiec</a></p>
+        <footer class="-0 pad-20px">
+            <p class="-200p">Copyright &copy;2018 by Patricia Joanna Borowiec</p>
         </footer>
     </body>
 </html>
