--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Student Bio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+    <title>PJB</title>
 </head>
 
     <a href="./index.html">About</a>
@@ -13,30 +15,28 @@
     <a href="./contact.html">Contact</a>
 
 <body>
-    <h1>Student Bio</h1>
+    <h1>About Me</h1>
         <h2>Patricia Borowiec</h2>
 
         <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAeRAAAAJGJmMDZjOWM2LTUxZDctNDY5Zi05OGY0LTc3MjUxOTM4NzA4Yg.jpg">
 
-        <p> Super fun to be around. </p>
+        <p> I was born in communist Poland, and immigrated to the USA as a refugee through Canada when I was three and a half.
+            I officially became a citizen when I was nine, and I changed my name from Patrycja to Patricia. In my Polish Passport
+            I am still Patrycja. I wish I hadn't since I did it to avoid being outed as not-American, and it made literally no difference. I did not grow up in a Polish neighborhood, but I did go to Polish
+            school reluctantly every Saturday morning. I grew up in Roscoe Village and I went to about seven different Public schools and one Catholic School  
+            . I thought I'd grow up to be an Actress. That pretty much got derailed when I ran away from home in 8th grade.
+            Along with two other teens, I hitchhiked and Grey Hound-ed it across the country, ended up in the following places: the Shoshone Spring Gathering,
+            San Francisco, Crescent City, Eugene, and finally - Portland. San Francisco and Portland are definitely the best places
+            to be homeless. I ended up in a movie (uncredited) as an extra in a few scenes. I can prove it. Anyway, Angelina Jolie was in it, I asked
+            her for $5 one day and she was kind of weird about it and gave me her jacket instead. Instead of being
+            grateful - I was irritated and threw the jacket away. LOL. I won't tell you about the bad parts of my adventure, but there were plenty.
+            I definitely do not recommend being 13 and a runaway. I learned
+            that life wasn't that much better on the streets, so I turned myself into the police, went to Juvie and then got back home
+            in time to graduate eighth grade. Sometimes I think about writing to Angelina Jolie to let her know it took a while,
+            but I turned out OK, actually way more than OK. And to thank her for the jacket. 
+        </p>
 
-        <h2>Contact Information</h2>
-        <ul>
-            <li><strong>Email:</strong> <a href="#">patriciaborowiec2018@u.northwestern.edu</a></li>
-            <li><strong>GitHub:</strong> <a href="#">patunia</a></li>
-            <li><strong>Portfolio:</strong> <a href="#">Coming soon!</a></li>
-        </ul>
-
-    <style>
-    body {
-        font-family: Helvetica;
-        color:chartreuse;
-        background-color: rgb(255, 80, 176)
-    }
-
-    h1 {
-        font-size: 42pt;
-        font-style: italic
-    }
-    </style>
+    <footer class="-0 pad-20px">
+        <p class="-200p">Copyright &copy;2018 by Patricia Joanna Borowiec</p>
+    </footer>
 </html>
