initial site files

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
     <title>PJB</title>
 </head>
-
-    <a href="./index.html">About</a>
-    <a href="./portfolio.html">Portfolio</a>
-    <a href="./contact.html">Contact</a>
+    <div class="navbar">
+        <a href="./index.html">About</a>
+        <a href="./portfolio.html">Portfolio</a>
+        <a href="./contact.html">Contact</a>
+    </div>
 
 <body>
     <h1>About Me</h1>
@@ -36,7 +37,7 @@
             but I turned out OK, actually way more than OK. And to thank her for the jacket. 
         </p>
 
-    <footer class="-0 pad-20px">
+    <footer class="pad-20px">
         <p class="-200p">Copyright &copy;2018 by Patricia Joanna Borowiec</p>
     </footer>
 </html>
