--- a/portfolio.html
+++ b/portfolio.html
@@ -15,14 +15,14 @@
     <body class="global">
     <header class="header">
 </header>
-            <a href="./index.html">About</a>
-            <a href="./portfolio.html">Portfolio</a>
-            <a href="./contact.html">Contact</a>
+    <a href="./index.html">About</a>
+    <a href="./portfolio.html">Portfolio</a>
+    <a href="./contact.html">Contact</a>
 
-    <div class="col-8">
-        <div id="portfolio">
-            <h2>Portfolio</h2>
-            <hr>
+<div id="wrapper">
+<div id="container">
+    <h2>Portfolio</h2>
+         <hr>
             <ul>
                 <li>
                     <a href="#"><img src="http://lorempixel.com/output/technics-q-c-400-200-1.jpg" height="110px"/> 
